--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@ body {
     margin:0;
     height: 100%;
     background-color: rgb(80, 92, 69);
+    overflow: hidden;
 
     display: grid;
     grid-template-areas: 
@@ -11,8 +12,8 @@ body {
         "filebrowser notepad"
         "timeline timeline";
 
-    grid-template-columns: 200px 1fr;
-    grid-template-rows: 10px 1fr $notepad-base-height 5px;
+    grid-template-columns: 200px minmax(0,1fr);
+    grid-template-rows: 10px minmax(0, 1fr) $notepad-base-height 5px;
 }
 
 @import "_timeline";
